# tide-var

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: par_train.py  resnet_modeling.py  train_resnet.py  train_single_resnet_mixed_modes.py  train_tide_var.py  train_utils.py  utils.py  utilsz.py
src/tremm/data/: mendelian_dataset.py
src/tremm/experiments/utils/: loaders.py
src/tremm/scripts/: cli.py  dataset_manager.py
src/tremm/utils/: downloader.py
src/tremm_local.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
