[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tremm-local"
version = "0.0.0"
description = "Local training utilities for TabM and T-ResNet"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
tremm = "tremm.scripts.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["tremm*"]
